RESOLVED FIXED 214542
WebPageProxyIdentifier parameter of WebPageProxy::CreateNewPage() should not be Optional
https://bugs.webkit.org/show_bug.cgi?id=214542
Summary WebPageProxyIdentifier parameter of WebPageProxy::CreateNewPage() should not ...
David Kilzer (:ddkilzer)
Reported 2020-07-19 20:04:48 PDT
WebPageProxyIdentifier parameter of WebPageProxy::CreateNewPage() should not be Optional. The method extracts the value of Optional<WebPageProxyIdentifier> unconditionally, so it's clear it doesn't need to be Optional<>. <rdar://problem/65768644>
Attachments
Patch v1 (5.05 KB, patch)
2020-07-19 20:07 PDT, David Kilzer (:ddkilzer)
no flags
David Kilzer (:ddkilzer)
Comment 1 2020-07-19 20:07:59 PDT
Created attachment 404695 [details] Patch v1
EWS
Comment 2 2020-07-20 08:17:30 PDT
Committed r264602: <https://trac.webkit.org/changeset/264602> All reviewed patches have been landed. Closing bug and clearing flags on attachment 404695 [details].
Note You need to log in before you can comment on or make changes to this bug.