WebPageProxyIdentifier parameter of WebPageProxy::CreateNewPage() should not be Optional <https://webkit.org/b/214542> <rdar://problem/65768644>

Reviewed by Darin Adler.

* UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::createNewPage):
* UIProcess/WebPageProxy.h:
(WebKit::WebPageProxy::createNewPage):
* UIProcess/WebPageProxy.messages.in:
- Remove Optional<> wrapper for WebPageProxyIdentifier
  parameter since the value is used unconditionally.


Canonical link: https://commits.webkit.org/227350@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@264602 268f45cc-cd09-0410-ab3c-d52691b4dbfc